crates/core/src/snapshots/ion_core__tests__invalid_token.snap
---
source: crates/core/src/lib.rs
expression: "err.pretty_print(false, code, \"<code>\")"
---
error: Invalid token
 --> <code>:1:5
  |
1 | x = \
  |     ^

